k8/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: reflectns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: reflectacr.azurecr.io/avyay-backend:latest1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
